Closed
Bug 1336591
Opened 9 years ago
Closed 4 years ago
[PDF Viewer] Canvas transparency broken with HWA enabled
Categories
(Core :: Graphics, defect, P3)
Tracking
()
VERIFIED
FIXED
96 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr45 | --- | unaffected |
| firefox51 | - | wontfix |
| firefox52 | - | wontfix |
| firefox-esr52 | --- | wontfix |
| firefox53 | - | wontfix |
| firefox-esr91 | --- | verified |
| firefox54 | + | wontfix |
| firefox55 | - | wontfix |
| firefox56 | --- | wontfix |
| firefox57 | --- | wontfix |
| firefox94 | --- | wontfix |
| firefox95 | --- | wontfix |
| firefox96 | --- | verified |
People
(Reporter: Snuffleupagus, Assigned: lsalzman)
References
Details
(Keywords: regression, Whiteboard: [gfx-noted])
Attachments
(4 files)
Steps to reproduce:
Open the attached PDF file in Firefox.
Result:
Part of the canvas has incorrect transparency, please see the attached screen-shot. Disabling HWA fixes the problem.
Regression range (it unfortunately seems that this regressed in *two* steps):
1. https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=ca5142203259cd252723d34e75d3e3b799b21765&tochange=538d248fa252a4100082fd9bc3fdc08d322cda22
Bas Schouten — Bug 1258168: Push ClearType compatible clipping layers when the last pushed layer was marked as opaque. r=jrmuizel
2. https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=4f54551cf526994ec2749bb3f39623369c423d2f&tochange=5a793218e7abe53a07a656fe0b9f330d5fc0f83f
Bas Schouten — Bug 1303534: Make sure to pop all clips before grappig the image for the top-level 'layer'. r=jrmuizel
| Reporter | ||
Comment 1•9 years ago
|
||
Flags: needinfo?(bas)
| Reporter | ||
Updated•9 years ago
|
Has Regression Range: --- → yes
Has STR: --- → yes
status-firefox51:
--- → affected
status-firefox52:
--- → affected
status-firefox53:
--- → affected
status-firefox54:
--- → affected
status-firefox-esr45:
--- → unaffected
tracking-firefox51:
--- → ?
tracking-firefox52:
--- → ?
tracking-firefox53:
--- → ?
tracking-firefox54:
--- → ?
OS: Unspecified → Windows
Updated•9 years ago
|
Whiteboard: gfx-noted
Updated•9 years ago
|
Whiteboard: gfx-noted → [gfx-noted]
Updated•9 years ago
|
Priority: -- → P3
Updated•9 years ago
|
Updated•9 years ago
|
Comment 2•9 years ago
|
||
Doesn't seem likely this will get fixed for the 53 time frame, but if we come up with a fix, please request uplift as far as you think it's reasonable.
Comment 3•9 years ago
|
||
Mark 54 fix-optional as there are no actions for the moment but still happy to have the fix in 54.
Updated•9 years ago
|
status-firefox55:
--- → affected
tracking-firefox55:
--- → +
Updated•8 years ago
|
I don't feel the need to track this for 55. If a fix is ready and deemed low risk, please nominate for uplift to Beta55.
Updated•8 years ago
|
Updated•8 years ago
|
Version: unspecified → 52 Branch
Updated•8 years ago
|
Updated•4 years ago
|
Flags: needinfo?(bas)
| Assignee | ||
Comment 5•4 years ago
|
||
Fixed by bug 1642583
| Reporter | ||
Comment 6•4 years ago
•
|
||
This is much better now, thank you!
However, it's still not completely fixed as shown in the attached screen-shot (with a red arrow added to highlight the bug).
Flags: needinfo?(lsalzman)
| Reporter | ||
Updated•4 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 7•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → lsalzman
Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ae34b453317a
Push clips when applying D2D gradients. r=gfx-reviewers,aosmond
Comment 9•4 years ago
|
||
| bugherder | ||
Status: REOPENED → RESOLVED
Closed: 4 years ago → 4 years ago
status-firefox96:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Updated•4 years ago
|
status-firefox94:
--- → wontfix
status-firefox95:
--- → wontfix
status-firefox-esr91:
--- → wontfix
Flags: needinfo?(lsalzman)
| Assignee | ||
Comment 10•4 years ago
|
||
Comment on attachment 9253737 [details]
Bug 1336591 - Push clips when applying D2D gradients. r?jrmuizel
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Visual artifacts in PDF.js (and all Canvas2D) on Windows.
- User impact if declined: Primitives in PDF.js (and all Canvas2D) don't clip properly on Windows leading to significant visual artifacting.
- Fix Landed on Version: 96
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively small change that essentially just undoes an ancient regressing bug.
- String or UUID changes made by this patch:
Attachment #9253737 -
Flags: approval-mozilla-esr91?
Comment 11•4 years ago
|
||
Comment on attachment 9253737 [details]
Bug 1336591 - Push clips when applying D2D gradients. r?jrmuizel
Approved for 91.5esr.
Attachment #9253737 -
Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
Comment 12•4 years ago
|
||
| bugherder uplift | ||
Flags: in-testsuite+
Updated•4 years ago
|
Updated•4 years ago
|
Flags: qe-verify+
Updated•4 years ago
|
QA Whiteboard: [qa-triaged]
Comment 13•4 years ago
|
||
Reproduced the issue on Win 10 x64 on two affected Nightly builds: 2017-02-03 and 2021-12-03.
Verified fixed with 91.5.0esr (20220105212146) and 96.0 (20220103221059) on Win 10 x64.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•