Bug 1336591 - Push clips when applying D2D gradients. r=aosmond, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D132865